# todo-crud

./: .gitignore  README.md  compose-db.yml  init_app.py  main.py  make_db.py  pyproject.toml  requirements.txt  utils.py
models/: __init__.py  status.py  task.py  todo.py
routes/: __init__.py  status.py  task.py  todo.py
tests/: conftest.py  test_status.py  test_task.py
