[tool.poetry]
name = "todo-crud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "todo_crud"}]

[tool.poetry.dependencies]
python = "^3.9"
flask-sqlalchemy = "^3.0.2"
flask = "^2.2.2"
flask-restful = "^0.3.9"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^1.4.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
